# keyboard_macro

./: .gitignore  CMakeLists.txt  README.md  bluetooth.cpp  debug.sh  global_vars.cpp  global_vars.h  grpc.cmake  keyboard_logs.txt  keyboard_logs1.txt  keyboard_util.cpp  keyboard_util.h  logger_thread.h  macro  macro.cpp  main.cpp  readThread.cpp  read_thread.cpp  read_thread.h  restart.cpp  runmacro.cpp  send-bluetooth.sh  send.sh  sendhid.py  test.py  updater.cpp  writeThread.cpp  골목.txt  피험체_error.txt
bluetooth/: bluetooth_adapter.cpp  bluetooth_adapter.h  bluetooth_agent.cpp  bluetooth_agent.h  bluetooth_device.cpp  bluetooth_device.h  bluetooth_registry.cpp  bluetooth_registry.h
controller/: main_controller.cpp  main_controller.h  restart_main_controller.h
driver/bluetooth/: bluetooth_adapter.cpp  bluetooth_adapter.h  bluetooth_device.cpp
driver/controller/: main_controller.cpp
driver/grpc_thread/: grpc_thread.cpp  grpc_thread.h
driver/logger_thread/: logger_thread.cpp  logger_thread.h
driver/read_thread/: bluetooth_read_thread.h  read_thread.cpp  read_thread.h
grpc_thread/: grpc_thread.cpp  grpc_thread.h  restart_grpc_thread.cpp  restart_grpc_thread.h
logger_thread/: logger_thread.cpp  logger_thread.h
proto/: input_service.pb.cc  input_service.proto  restart_service.proto
read_thread/: bluetooth_read_thread.cpp  read_thread.cpp  read_thread.h
restarter/controller/: restart_main_controller.cpp
restarter/grpc_thread/: restart_grpc_thread.cpp  restart_grpc_thread.h
restarter/updater/: updater_thread.cpp  updater_thread.h
updater/: updater_thread.cpp  updater_thread.h
utils/: keyboard_util.h  type.h
